fixed subscribe spacing and footer alignment

--- a/landingpage/src/App.scss
+++ b/landingpage/src/App.scss
@@ -47,7 +47,7 @@ body {
 h1 {
     font-size: 3.998rem;
     font-weight: inherit;
-    line-height: 1.5;
+    line-height: 1.1;
     font-family: 'Droid Serif Bold', "Merriweather", 'Times New Roman', Times, serif;
     font-weight: 400;
 }
@@ -55,7 +55,7 @@ h1 {
 h2 {
     font-size: 2.827rem;
     font-weight: inherit;
-    line-height: 1.5;
+    line-height: 1.1;
     font-family: 'Droid Serif Bold', "Merriweather", 'Times New Roman', Times, serif;
     font-weight: 600;
 }
