--- a/landingpage/src/Components/FooterNew/FooterNew.scss
+++ b/landingpage/src/Components/FooterNew/FooterNew.scss
@@ -1,149 +1,153 @@
 @import "src/Style/Templates";
 
-#siteMapGrid {
-  display: grid;
-  width: 100%;
-  height: auto;
+#footerJumbo {
+  padding: 3% 3.5%;
 
-  .botMg5vh{
-    margin-bottom: 1rem;
-  }
+  #siteMapGrid {
+    display: grid;
+    width: 100%;
+    height: auto;
 
-  .siteMapHeader {
-    @include text-orange;
-    align-self: flex-end;
-
-  }
-
-  .footerLink {
-    @include text-liteBlue;
-  }
-
-  @include for-size(phone-only) {
-    grid-template-rows: repeat(8, auto);
-    grid-template-columns: auto;
-    grid-template-areas: "lg""lgct""sh""shct""pl""plct""sb""sbct";
-  }
-
-  @include for-size(tablet-portrait-up) {
-    grid-template-rows: repeat (4, auto);
-    grid-template-columns: 40% 1fr;
-    grid-template-areas: "lg sh ""lgct shct ""pl sb""plct sbct";
-  }
-
-  @include for-size(desktop-up) {
-    grid-template-rows: auto 1fr;
-    grid-template-columns: repeat(3, 25%) 1fr;
-    grid-template-areas: "lg sh pl sb""lgct shct plct sbct";
-  }
-
-  #logo {
-    grid-area: lg;
-  }
-
-  #search {
-    grid-area: sh;
-  }
-
-  #policies {
-    grid-area: pl;
-  }
-
-  #sub {
-    grid-area: sb;
-  }
-
-  #logoCont {
-    grid-area: lgct;
-  }
-
-  #searchCont {
-    grid-area: shct;
-  }
-
-  #policiesCont {
-    grid-area: plct;
-  }
-
-  #followUsCont {
-    grid-area: sbct;
-
-    #footerSocial {
-      margin-bottom: 1vh;
-    }
-  }
-
-  .icons {
-    width: 70%;
-  }
-
-
-
-}
-
-
-
-#divisionLine {
-  display: block;
-  border-top: 1px solid rgb(226, 240, 252);
-  margin: 15vh 0 5vh 0;
-
-}
-
-#disclaimer {
-  margin-top: 50px;
-
-  p {
-    font-size: 12px;
-  }
-
-  @include for-size(phone-only) {
-    #leftDisclaimer {
-      text-align: left;
+    .botMg5vh {
+      margin-bottom: 1rem;
     }
 
-    #rightDisclaimer {
-      text-align: left;
+    .siteMapHeader {
+      @include text-orange;
+      align-self: flex-end;
+
     }
+
+    .footerLink {
+      @include text-liteBlue;
+    }
+
+    @include for-size(phone-only) {
+      grid-template-rows: repeat(8, auto);
+      grid-template-columns: auto;
+      grid-template-areas: "lg""lgct""sh""shct""pl""plct""sb""sbct";
+    }
+
+    @include for-size(tablet-portrait-up) {
+      grid-template-rows: repeat (4, auto);
+      grid-template-columns: 40% 1fr;
+      grid-template-areas: "lg sh ""lgct shct ""pl sb""plct sbct";
+    }
+
+    @include for-size(desktop-up) {
+      grid-template-rows: auto 1fr;
+      grid-template-columns: repeat(3, 25%) 1fr;
+      grid-template-areas: "lg sh pl sb""lgct shct plct sbct";
+    }
+
+    #logo {
+      grid-area: lg;
+    }
+
+    #search {
+      grid-area: sh;
+    }
+
+    #policies {
+      grid-area: pl;
+    }
+
+    #sub {
+      grid-area: sb;
+    }
+
+    #logoCont {
+      grid-area: lgct;
+    }
+
+    #searchCont {
+      grid-area: shct;
+    }
+
+    #policiesCont {
+      grid-area: plct;
+    }
+
+    #followUsCont {
+      grid-area: sbct;
+
+      #footerSocial {
+        margin-bottom: 1vh;
+      }
+    }
+
+    .icons {
+      width: 70%;
+    }
+
+
+
   }
 
-  @include for-size(tablet-portrait-up) {
-    #leftDisclaimer {
-      text-align: left;
-    }
 
-    #rightDisclaimer {
-      text-align: left;
-    }
+
+  #divisionLine {
+    display: block;
+    border-top: 1px solid rgb(226, 240, 252);
+    margin: 15vh 0 5vh 0;
+
   }
 
-  @include for-size(tablet-landscape-up) {
-    #leftDisclaimer {
-      text-align: left;
+  #disclaimer {
+    margin-top: 50px;
+
+    p {
+      font-size: 12px;
     }
 
-    #rightDisclaimer {
-      text-align: right;
-    }
-  }
+    @include for-size(phone-only) {
+      #leftDisclaimer {
+        text-align: left;
+      }
 
-  @include for-size(desktop-up) {
-    #leftDisclaimer {
-      text-align: left;
-    }
-
-    #rightDisclaimer {
-      text-align: right;
-    }
-  }
-
-  @include for-size(big-desktop-up) {
-    #leftDisclaimer {
-      text-align: left;
+      #rightDisclaimer {
+        text-align: left;
+      }
     }
 
-    #rightDisclaimer {
-      text-align: right;
+    @include for-size(tablet-portrait-up) {
+      #leftDisclaimer {
+        text-align: left;
+      }
+
+      #rightDisclaimer {
+        text-align: left;
+      }
+    }
+
+    @include for-size(tablet-landscape-up) {
+      #leftDisclaimer {
+        text-align: left;
+      }
+
+      #rightDisclaimer {
+        text-align: right;
+      }
+    }
+
+    @include for-size(desktop-up) {
+      #leftDisclaimer {
+        text-align: left;
+      }
+
+      #rightDisclaimer {
+        text-align: right;
+      }
+    }
+
+    @include for-size(big-desktop-up) {
+      #leftDisclaimer {
+        text-align: left;
+      }
+
+      #rightDisclaimer {
+        text-align: right;
+      }
     }
   }
 }
