--- a/landingpage/src/Components/FooterSection/FooterSection.scss
+++ b/landingpage/src/Components/FooterSection/FooterSection.scss
@@ -1,26 +1,51 @@
+@import "src/Style/Templates.scss";
+
 #footerTop {
   margin: 0;
   width: 100vw;
-  max-width:100%;
+  max-width: 100%;
   height: auto;
   color: white;
-  padding: 50px;
+  padding: 10% 3.5%;
+
   background-image:
     linear-gradient(60deg, rgba(255, 168, 0, 1) 0%,
     rgba(255, 168, 0, 1) 40%,
     rgba(25, 118, 210, 1) 40%,
     rgba(25, 118, 210, 1) 100%),
-    linear-gradient(rgba(25, 118, 210, 0.8), rgba(25, 118, 210, 0.8))
+    linear-gradient(rgba(25, 118, 210, 0.8), rgba(25, 118, 210, 0.8));
+
+  @include for-size(phone-only) {
+    padding: 15% 3.5%;
+  }
+
+  @include for-size(tablet-portrait-up) {
+    padding: 10% 3.5%;
+  }
+
+  @include for-size(tablet-landscape-up) {
+    padding: 5% 3.5%;
+  }
+
+  @include for-size(desktop-up) {
+    padding: 3% 3.5%;
+  }
+
+  @include for-size(big-desktop-up) {
+    padding: 3% 3.5%;
+  }
+
+  #subscribeHeader {
+    font-size: 225%;
+    margin: 0;
+  }
+
+
 }
 
 #button {
   color: white;
-  box-shadow: 5px 5px 5px darkslategrey;
-}
-
-#button_login {
-  color: white;
-  box-shadow: 5px 5px 5px darkslategrey;
+  // box-shadow: 5px 5px 5px darkslategrey;
 }
 
 #footerJoin {
